# advent-of-code-2024

./: Dockerfile  README.md  docker-background.sh  docker-build.sh  docker-interactive.sh  docker-run.sh  generate-setups.sh  pyproject.toml
.github/workflows/: docker-run-aoc-ci.yml
aoc_utils/: download.py
articles/day-1/: article.md
articles/day-2/: article.md
articles/day-3/: article.md
setups/: setup-day-1.sql  setup-day-2.sql  setup-day-3.sql  setup.sql.tmpl
setups/days/: setup-day-1.sql  setup-day-2.sql  setup-day-3.sql  setup-day-4.sql  setup-day-5.sql
solutions/: create-solution-table.sh  exec.sh  read.sh  select-solution-table.sh
solutions/day-1/: solution-1.sql  solution-2.sql
solutions/day-2/: solution-1.sql  solution-2.sql
solutions/day-3/: solution-1.sql  solution-2.sql
solutions/day-4/: solution-1.sql  solution-2.sql
solutions/day-5/: solution-1.sql  solution-2.sql  worksheet.sql
